# ai-agents-papers

./: .gitignore  README.md
digests/: digest_01.04.2024-07.04.2024.md  digest_08.04.2024-14.04.2024.md  digest_15.04.2024-21.04.2024.md  digest_18.03.2024-24.03.2024.md  digest_25.03.2024-31.03.2024.md
papers/: digest_01.04.2024-07.04.2024.jsonl  digest_08.04.2024-14.04.2024.jsonl  digest_15.04.2024-21.04.2024.jsonl  digest_18.03.2024-24.03.2024.jsonl  digest_25.03.2024-31.03.2024.jsonl
src/: process_digest.py  pyproject.toml
